--- a/layouts/_default/buscar.html
+++ b/layouts/_default/buscar.html
@@ -1,17 +1,18 @@
-{{ define "footer" }}
+{{ define "footerfiles" }}
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.2.0/fuse.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/jquery.mark.min.js"></script>
 <script src="{{ "js/search.js" | absURL }}"></script>
 {{ end }}
+
 {{ define "main" }}
 <section class="resume-section p-3 p-lg-5 d-flex flex-column">
   <div class="my-auto" >
-    <form action="{{ "search" | absURL }}">
+    <form action="{{ "buscar" | absURL }}">
       <input id="search-query" name="s"/>
     </form>
     <div id="search-results">
-     <h3>Resultados</h3>
+     <h3>Páginas</h3>
     </div>
   </div>
 </section>
